--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
-    "react-fontawesome": "^1.7.1"
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8",
